plugin translators refactoring first round

--- a/src/translators/plugInfo.json.in
+++ b/src/translators/plugInfo.json.in
@@ -6,7 +6,7 @@
                     "AL::usdmaya::fileio::translators::MayaReference": {
                         "bases": ["AL::usdmaya::fileio::translators::TranslatorBase"]
                     },
-                    "AL::usdmaya::fileio::translators::CameraTranslator": {
+                    "AL::usdmaya::fileio::translators::Camera": {
                         "bases": ["AL::usdmaya::fileio::translators::TranslatorBase"]
                     },
                     "AL::usdmaya::fileio::translators::Mesh": {
