--- a/src/lib/AL_USDMaya/CMakeLists.txt
+++ b/src/lib/AL_USDMaya/CMakeLists.txt
@@ -244,11 +244,11 @@ target_link_libraries(${PYTHON_LIBRARY_NAME}
     ${LIBRARY_NAME}
 )
 
-set(libFile ${CMAKE_SHARED_LIBRARY_PREFIX}${libName}${CMAKE_SHARED_LIBRARY_SUFFIX})
+set(libFile ${CMAKE_SHARED_LIBRARY_PREFIX}${LIBRARY_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
 set(PLUG_INFO_RESOURCE_PATH "resources")
 set(PLUG_INFO_ROOT "..")
 set(PLUG_INFO_PLUGIN_NAME "pxr.${LIBRARY_NAME}")
-set(PLUG_INFO_LIBRARY_PATH "../../../../lib/${libFile}")
+set(PLUG_INFO_LIBRARY_PATH "../../${libFile}")
 configure_file(
     plugInfo.json
     ${CMAKE_CURRENT_BINARY_DIR}/plugInfo.json
@@ -275,10 +275,10 @@ install(CODE
 )
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/plugInfo.json
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/share/usd/plugins/${LIBRARY_NAME}/resources
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/usd/${LIBRARY_NAME}/resources
 )
 install(CODE
-    "file(WRITE \"${CMAKE_INSTALL_PREFIX}/share/usd/plugins/plugInfo.json\" \"{\n    \\\"Includes\\\": [ \\\"*/resources/\\\" ]\n}\")"
+    "file(WRITE \"${CMAKE_INSTALL_PREFIX}/lib/usd/plugInfo.json\" \"{\n    \\\"Includes\\\": [ \\\"*/resources/\\\" ]\n}\")"
 )
 
 # install public headers
