--- a/src/docker/Dockerfile_centos6
+++ b/src/docker/Dockerfile_centos6
@@ -12,5 +12,5 @@ ENV PATH $BUILD_DIR/src:$PATH \
     LD_LIBRARY_PATH $BUILD_DIR/lib:$LD_LIBRARY_PATH \
     MAYA_PLUG_IN_PATH $BUILD_DIR/plugin:$MAYA_PLUG_IN_PATH \
     MAYA_SCRIPT_PATH $BUILD_DIR/lib:$BUILD_DIR/share/usd/plugins/usdMaya/resources:$MAYA_SCRIPT_PATH \
-    $BUILD_DIR/share/usd/plugins:$PXR_PLUGINPATH
+    $BUILD_DIR/share/usd/plugins:$PXR_PLUGINPATH_NAME
 
