--- a/src/docker/Dockerfile_centos7
+++ b/src/docker/Dockerfile_centos7
@@ -24,5 +24,5 @@ ENV MAYA_PLUG_IN_PATH $BUILD_DIR/plugin:$MAYA_PLUG_IN_PATH
 CMD echo "-Updating MAYA_SCRIPT_PATH-"
 ENV MAYA_SCRIPT_PATH $BUILD_DIR/lib:$BUILD_DIR/share/usd/plugins/usdMaya/resources:$MAYA_SCRIPT_PATH
 
-CMD echo "-Updating PXR_PLUGINPATH-"
-ENV PXR_PLUGINPATH $BUILD_DIR/share/usd/plugins:$PXR_PLUGINPATH
+CMD echo "-Updating PXR_PLUGINPATH_NAME-"
+ENV PXR_PLUGINPATH_NAME $BUILD_DIR/share/usd/plugins:$PXR_PLUGINPATH_NAME
