Squashed 'src/' changes from dd4eadbc..99639059
99639059 Merge pull request #110 from LumaPictures/pr/PXR_STRICT_BUILD_MODE
1fbcafbd Merge pull request #109 from LumaPictures/pr/proxyShape_translator
a9ba0935 get rid of warning about unused errorString (for PXR_STRICT_BUILD_MODE)
a797ecf1 Merge branch 'develop' into pr/proxyShape_translator
2eaaa78d misc changes for usd-0.18.09 compatibility
bc522653 separate out proxy-shape translator for pixar plugin into completely separate plugin

git-subtree-dir: src
git-subtree-split: 996390598c01c5efa48d737480c1fba134c536c8

--- a/translators/CMakeLists.txt
+++ b/translators/CMakeLists.txt
@@ -101,3 +101,12 @@ install(FILES ${arg_PUBLIC_HEADER_FILES}
 if(NOT SKIP_USDMAYA_TESTS)
   add_subdirectory(tests)
 endif()
+
+option(BUILD_USDMAYA_PXR_TRANSLATORS
+    "Build a translator for pxrUsd maya plugin, that allows it to export AL_usdmaya_ProxyShapes as references when usdExport is called."
+    ON)
+    
+if(BUILD_USDMAYA_PXR_TRANSLATORS)
+    set(PXR_TRANSLATORS_PACKAGE AL_USDMayaPxrTranslators)
+    add_subdirectory(pxrUsdTranslators)
+endif()
