--- a/src/schemas/AL/usd/schemas/CMakeLists.txt
+++ b/src/schemas/AL/usd/schemas/CMakeLists.txt
@@ -15,8 +15,8 @@ set(
 
 # Bake library name
 configure_file (
-    ./plugInfo.json.in
-    ${CMAKE_CURRENT_SOURCE_DIR}/plugInfo.json
+    plugInfo.json.in
+    ./plugInfo.json
     @ONLY
 )
 
@@ -42,7 +42,7 @@ execute_process(
             ${CMAKE_CURRENT_BINARY_DIR}/schema.usda
             .
     WORKING_DIRECTORY
-        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_BINARY_DIR}
     RESULT_VARIABLE
         usdgen_res
 )
@@ -209,7 +209,7 @@ file(RELATIVE_PATH
 
 # Bake relative path
 configure_file(
-    ./plugInfo.json
+    ${CMAKE_CURRENT_BINARY_DIR}/plugInfo.json
     .
 )
 
@@ -219,7 +219,7 @@ install(
 )
 
 install(
-    FILES generatedSchema.usda 
+    FILES ${CMAKE_CURRENT_BINARY_DIR}/generatedSchema.usda 
     DESTINATION ${resources_install_path}
 )
 
