Squashed 'src/' changes from 98403c56..8d30f3a1
8d30f3a1 Merge pull request #116 from LumaPictures/pr/light_decay
c4f44955 Merge pull request #115 from LumaPictures/pr/fixSetScaleTranslate_in_enableReadAnimatedValues
0ea6dd3c Merge pull request #114 from LumaPictures/pr/shearTweakFix
871d801d Merge pull request #112 from LumaPictures/pr/dontCreateEmptyOps
5f738f04 Merge pull request #93 from LumaPictures/pr/isAlwaysDirty_false
d218e658 Use USD_GENSCHEMA macro
23616a03 [schemas] Removed VALIDATE_GENERATED_SCHEMAS option
1e12e28c [schemas] plugInfo.json generated in binary dir.
a0112cbc use hard-coded constants for comparison, per Rob's note
9f999224 fix check for non-zero scalePivotTranslate when enableReadAnimatedValues is changed
00f603a7 Revert "use standard MVector / MPoint / MQuaternion constants for zero/one"
d208de9f fix shearTweak (was typo setting scaleTweak instead)
793f5acf avoid creating do-nothing xform ops
87fab1cd support for linear / quadratic light decay in VP2.0
a9bd582f add missing include
c56aa610 Merge branch 'develop' into pr/isAlwaysDirty_false
119e641f reorganize ProxyDrawOverride::prepareForDraw to do all early exit checks first
2695564c don't trigger redraw when pushToPrim enabled on xform creation
240c60b3 small performance tweak: prepareForDraw allows you to re-use old MUserData
321be291 set ProxyDrawOverride's isAlwaysDirty to false

git-subtree-dir: src
git-subtree-split: 8d30f3a1863c46e98d7a759aa255f0d39e2704be

--- a/schemas/AL/usd/schemas/CMakeLists.txt
+++ b/schemas/AL/usd/schemas/CMakeLists.txt
@@ -15,18 +15,16 @@ set(
 
 # Bake library name
 configure_file (
-    ./plugInfo.json.in
-    ${CMAKE_CURRENT_SOURCE_DIR}/plugInfo.json
+    plugInfo.json.in
+    ./plugInfo.json
     @ONLY
 )
 
 list(APPEND DEPENDANT_LIBRARIES ${PYTHON_LIBRARIES} usd usdGeom)
 
 ####################################################################################################
-# Schemas generation and validation
+# Schemas generation
 ####################################################################################################
-
-if(VALIDATE_GENERATED_SCHEMAS)
 
 # Bake library name, tokens prefix and usd schemas path
 set(USD_SCHEMA_PATH usd/schema.usda)
@@ -38,18 +36,17 @@ configure_file (
 
 execute_process(
     COMMAND
-        usdGenSchema
-            ${CMAKE_CURRENT_BINARY_DIR}/schema.usda
-            .
+        python
+        ${USD_GENSCHEMA}
+        ${CMAKE_CURRENT_BINARY_DIR}/schema.usda
+        .
     WORKING_DIRECTORY
-        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_BINARY_DIR}
     RESULT_VARIABLE
         usdgen_res
 )
 if(usdgen_res)
     message(FATAL_ERROR "Schemas generation failed")
-endif()
-
 endif()
 
 ####################################################################################################
@@ -209,7 +206,7 @@ file(RELATIVE_PATH
 
 # Bake relative path
 configure_file(
-    ./plugInfo.json
+    ${CMAKE_CURRENT_BINARY_DIR}/plugInfo.json
     .
 )
 
@@ -219,7 +216,7 @@ install(
 )
 
 install(
-    FILES generatedSchema.usda 
+    FILES ${CMAKE_CURRENT_BINARY_DIR}/generatedSchema.usda 
     DESTINATION ${resources_install_path}
 )
 
