--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,9 @@ set(CMAKE_CXX_FLAGS
     -Werror
     "${_PXR_CXX_WARNING_FLAGS}"
 )
+if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 6)
+    list(APPEND CMAKE_CXX_FLAGS -D_GLIBCXX_USE_CXX11_ABI=0)
+endif()
 string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
 option(SKIP_USDMAYA_TESTS "Skip test building" OFF)
