expose some camera interfaces

--- a/src/translators/CMakeLists.txt
+++ b/src/translators/CMakeLists.txt
@@ -18,6 +18,10 @@ add_library(${TRANSLATORS_PACKAGE}
     FrameRange.cpp
 )
 
+set(arg_PUBLIC_HEADER_FILES
+    Camera.h
+)
+
 target_compile_definitions(${TRANSLATORS_PACKAGE}
   PRIVATE
     AL_MAYA_MACROS_EXPORT
