moved shareable test code to new AL_USDMayaTest library, update testPlugin to use

--- a/src/plugin/AL_USDMayaTestPlugin/CMakeLists.txt
+++ b/src/plugin/AL_USDMayaTestPlugin/CMakeLists.txt
@@ -66,6 +66,7 @@ target_link_libraries(${PXR_PACKAGE}
     AL_MayaUtils
     AL_USDUtils
     AL_USDMaya
+    AL_USDMayaTest
     ${GTEST_LIBRARIES}
     ${MAYA_LIBRARIES}
 )
@@ -75,6 +76,7 @@ PRIVATE
     ${GTEST_INCLUDE_DIRS}
     ${MAYA_INCLUDE_DIRS}
     "../../lib/AL_USDMaya"    
+    ${USDMAYATEST_INCLUDE_LOCATION}
 )
 
 if(MSVC)
