--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,6 +106,7 @@ add_subdirectory(utils)
 add_subdirectory(usdutils)
 add_subdirectory(mayautils)
 add_subdirectory(usdmayautils)
+add_subdirectory(usdmayatest)
 
 add_subdirectory(lib)
 add_subdirectory(plugin)
