--- a/src/lib/AL_USDMaya/CMakeLists.txt
+++ b/src/lib/AL_USDMaya/CMakeLists.txt
@@ -84,6 +84,9 @@ list(APPEND AL_usdmaya_fileio_translators_headers
         AL/usdmaya/fileio/translators/TranslatorContext.h
         AL/usdmaya/fileio/translators/TranslatorTestPlugin.h
         AL/usdmaya/fileio/translators/TranslatorTestType.h
+        AL/usdmaya/fileio/translators/SchemaApiPlugin.h
+        AL/usdmaya/fileio/translators/SchemaApiTestPlugin.h
+        AL/usdmaya/fileio/translators/SchemaApiTestType.h
 )
 
 list(APPEND AL_usdmaya_fileio_translators_source
@@ -94,6 +97,9 @@ list(APPEND AL_usdmaya_fileio_translators_source
         AL/usdmaya/fileio/translators/TranslatorContext.cpp
         AL/usdmaya/fileio/translators/TranslatorTestPlugin.cpp
         AL/usdmaya/fileio/translators/TranslatorTestType.cpp
+        AL/usdmaya/fileio/translators/SchemaApiPlugin.cpp
+        AL/usdmaya/fileio/translators/SchemaApiTestPlugin.cpp
+        AL/usdmaya/fileio/translators/SchemaApiTestType.cpp
 )
 
 list(APPEND AL_usdmaya_nodes_headers
