Squashed 'src/' changes from 584ffa4f..3244df6f
3244df6f Merge pull request #132 from autodesk-forks/donnels/set_version_in_plugin
c17d9927 Merge pull request #131 from autodesk-forks/donnels/adsk_ufe_selection
3831a9c6 Updates from code review comments. Make method inline to avoid exporting the method.
bcdf33ed Set the version in the Maya plugin so it can be queried.
05a2b46a Updates from code review comments.
b23402dd Squashing 'dev-adsk' branch for merge to develop

git-subtree-dir: src
git-subtree-split: 3244df6fdd2d1a0919358ba0b6cba6c8f1bd76ac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,22 @@ add_definitions(${_PXR_CXX_DEFINITIONS})
 
 find_package(Maya REQUIRED)
 
+if(CMAKE_WANT_UFE_BUILD)
+    add_definitions(-DWANT_UFE_BUILD)	
+    message(STATUS "UFE Build Enabled")
+    if (NOT UFE_VERSION)
+        message(FATAL_ERROR "UFE_VERSION must be defined when WANT_UFE_BUILD is enabled")
+    endif()
+    message(STATUS "Using UFE version : ${UFE_VERSION}")
+    string(REPLACE "." ";" UFE_VERSION_LIST ${UFE_VERSION})
+    list(GET UFE_VERSION_LIST 0 UFE_MAJOR_VERSION)
+    list(GET UFE_VERSION_LIST 1 UFE_MINOR_VERSION)
+    list(GET UFE_VERSION_LIST 2 UFE_PATCH_LEVEL)
+    find_package(UFE REQUIRED)
+    include_directories(${UFE_INCLUDE_DIR})
+endif()
+
+
 include_directories(${MAYA_INCLUDE_DIRS})
 
 include_directories(${PXR_INCLUDE_DIRS})
@@ -52,8 +68,6 @@ set(NEED_BOOST_FILESYSTEM ON)
 
 if(WIN32)
     set(CMAKE_CXX_FLAGS
-        -std=c++11
-        /WX
         "${_PXR_CXX_FLAGS}"
     )
 else()
