--- a/mayautils/AL/maya/CMakeLists.txt
+++ b/mayautils/AL/maya/CMakeLists.txt
@@ -81,6 +81,9 @@ install(TARGETS ${MAYAUTILS_LIBRARY_NAME}
     RUNTIME
     DESTINATION ${MAYAUTILS_LIBRARY_LOCATION}
 )
+if(MSVC)
+    install(FILES $<TARGET_PDB_FILE:${MAYAUTILS_LIBRARY_NAME}> DESTINATION ${MAYAUTILS_LIBRARY_LOCATION} OPTIONAL)
+endif()
 
 if(NOT SKIP_USDMAYA_TESTS)
   add_subdirectory(tests)
