--- a/translators/pxrUsdTranslators/CMakeLists.txt
+++ b/translators/pxrUsdTranslators/CMakeLists.txt
@@ -65,6 +65,9 @@ install(TARGETS ${PXR_TRANSLATORS_PACKAGE}
  RUNTIME
  DESTINATION plugin
 )
+if(MSVC)
+ install(FILES $<TARGET_PDB_FILE:${PXR_TRANSLATORS_PACKAGE}> DESTINATION plugin OPTIONAL)
+endif()
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/plugInfo.json
  DESTINATION ${CMAKE_INSTALL_PREFIX}/plugin/${PXR_TRANSLATORS_PACKAGE}/resources
