--- a/usdmayautils/AL/usdmaya/utils/CMakeLists.txt
+++ b/usdmayautils/AL/usdmaya/utils/CMakeLists.txt
@@ -76,3 +76,6 @@ install(TARGETS ${USDMAYA_UTILS_LIBRARY_NAME}
     RUNTIME
     DESTINATION ${MAYA_UTILS_LIBRARY_LOCATION}
 )
+if(MSVC)
+    install(FILES $<TARGET_PDB_FILE:${USDMAYA_UTILS_LIBRARY_NAME}> DESTINATION ${MAYA_UTILS_LIBRARY_LOCATION} OPTIONAL)
+endif()
