--- a/usdutils/AL/usd/utils/CMakeLists.txt
+++ b/usdutils/AL/usd/utils/CMakeLists.txt
@@ -64,3 +64,6 @@ install(TARGETS ${USDUTILS_LIBRARY_NAME}
     RUNTIME
     DESTINATION ${USDUTILS_LIBRARY_LOCATION}
 )
+if(MSVC)
+    install(FILES $<TARGET_PDB_FILE:${USDUTILS_LIBRARY_NAME}> DESTINATION ${USDUTILS_LIBRARY_LOCATION} OPTIONAL)
+endif()
