--- a/utils/AL/CMakeLists.txt
+++ b/utils/AL/CMakeLists.txt
@@ -42,3 +42,6 @@ install(TARGETS ${EVENTS_LIBRARY_NAME}
     RUNTIME
     DESTINATION ${EVENTS_LIBRARY_LOCATION}
 )
+if(MSVC)
+    install(FILES $<TARGET_PDB_FILE:${EVENTS_LIBRARY_NAME}> DESTINATION ${EVENTS_LIBRARY_LOCATION} OPTIONAL)
+endif()
