--- a/src/mayautils/AL/maya/tests/mayaplugintest/CMakeLists.txt
+++ b/src/mayautils/AL/maya/tests/mayaplugintest/CMakeLists.txt
@@ -26,13 +26,13 @@ target_link_libraries(${MAYAUTILS_TEST_LIBRARY_NAME}
       ${GTEST_LIBRARIES}
       ${MAYA_LIBRARIES}
       ${MAYAUTILS_LIBRARY_NAME}
-      AL_USDMayaTest
+      ${MAYATEST_LIBRARY_NAME}
 )
 
 target_include_directories(${MAYAUTILS_TEST_LIBRARY_NAME}
   PRIVATE
       ${GTEST_INCLUDE_DIRS}
-      ${USDMAYATEST_INCLUDE_LOCATION}
+      ${MAYATEST_INCLUDE_LOCATION}
 )
 
 set(MAYAUTILS_TEST_MAYAPLUGIN_INSTALL_PATH ${CMAKE_INSTALL_PREFIX}/testplugins)
