--- a/src/schemas/AL/usd/schemas/maya/plugInfo.json.in
+++ b/src/schemas/AL/usd/schemas/maya/plugInfo.json.in
@@ -85,8 +85,8 @@
                     }
                 }
             }, 
-            "LibraryPath": "${SCHEMAS_LIBRARY_DIR}/@CMAKE_SHARED_LIBRARY_PREFIX@@SCHEMAS_PACKAGE@@CMAKE_SHARED_LIBRARY_SUFFIX@", 
-            "Name": "@SCHEMAS_PACKAGE@", 
+            "LibraryPath": "${SCHEMAS_LIBRARY_DIR}/@CMAKE_SHARED_LIBRARY_PREFIX@AL_USDMayaSchemas@CMAKE_SHARED_LIBRARY_SUFFIX@", 
+            "Name": "AL_USDMayaSchemas", 
             "ResourcePath": "resources", 
             "Root": "..", 
             "Type": "library"
