--- a/src/schemas/CMakeLists.txt
+++ b/src/schemas/CMakeLists.txt
@@ -1,8 +1,7 @@
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+add_subdirectory(AL/usd/schemas/maya)
 
-add_subdirectory(AL/usd/schemas)
-
-target_include_directories(${SCHEMAS_PACKAGE}
+target_include_directories(AL_USDMayaSchemas
 	PUBLIC
 	${CMAKE_CURRENT_BINARY_DIR}
 )
