--- a/src/mayautils/AL/maya/tests/mayaplugintest/CMakeLists.txt
+++ b/src/mayautils/AL/maya/tests/mayaplugintest/CMakeLists.txt
@@ -24,9 +24,8 @@ SET_TARGET_PROPERTIES(${MAYAUTILS_TEST_LIBRARY_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${MAYAUTILS_TEST_LIBRARY_NAME}
   PRIVATE
       ${GTEST_LIBRARIES}
-      ${MAYA_LIBRARIES}
+      AL_MayaTest
       ${MAYAUTILS_LIBRARY_NAME}
-      ${MAYATEST_LIBRARY_NAME}
 )
 
 target_include_directories(${MAYAUTILS_TEST_LIBRARY_NAME}
@@ -48,7 +47,6 @@ target_include_directories(${MAYAUTILS_TEST_LIBRARY_NAME}
     PUBLIC 
     ${MAYAUTILS_INCLUDE_LOCATION}
     )
-    
 
 add_test(
     NAME ${MAYAUTILS_TEST_LIBRARY_NAME}
