removed OpenMayaFX lib from AL_USDMaya library as seems unused, and is causing linker probs. Fixed up deps on AL_USDMayaTestPlugin

--- a/src/plugin/AL_USDMayaTestPlugin/CMakeLists.txt
+++ b/src/plugin/AL_USDMayaTestPlugin/CMakeLists.txt
@@ -63,8 +63,8 @@ target_link_libraries(${PXR_PACKAGE}
     AL_USDMayaUtils
     AL_MayaUtils
     AL_USDUtils
-    AL_USDMaya
-    ${MAYA_TEST_LIBRARY_NAME}
+    AL_USDMaya   #Adding this recursively pulls in lots of things
+    AL_MayaTest
     ${GTEST_LIBRARIES}
 )
 
