added gtest inclue

--- a/src/mayatest/AL/maya/test/CMakeLists.txt
+++ b/src/mayatest/AL/maya/test/CMakeLists.txt
@@ -41,6 +41,7 @@ target_link_libraries(${MAYA_TEST_LIBRARY_NAME}
 target_include_directories(${MAYA_TEST_LIBRARY_NAME} 
     PUBLIC
     ${MAYATEST_INCLUDE_LOCATION}
+    ${GTEST_INCLUDE_DIRS}
 )
 
 # install the public headers
