add same change to ALCmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,7 +139,9 @@ find_package(USD)
 
 add_subdirectory(${SUBTREE_DIRECTORY}/utils)
 add_subdirectory(${SUBTREE_DIRECTORY}/usdutils)
-add_subdirectory(${SUBTREE_DIRECTORY}/mayatest)
+if(NOT SKIP_USDMAYA_TESTS)
+	add_subdirectory(${SUBTREE_DIRECTORY}/mayatest)
+endif()
 add_subdirectory(${SUBTREE_DIRECTORY}/mayautils)
 add_subdirectory(${SUBTREE_DIRECTORY}/usdmayautils)
 add_subdirectory(${SUBTREE_DIRECTORY}/lib)
