find gtest package

--- a/src/mayatest/AL/maya/test/CMakeLists.txt
+++ b/src/mayatest/AL/maya/test/CMakeLists.txt
@@ -2,7 +2,7 @@
 ####################################################################################################
 # Setup 
 ####################################################################################################
-
+find_package(GTest REQUIRED)
 set(MAYA_TEST_LIBRARY_NAME "AL_MayaTest")
 set(MAYA_TEST_LIBRARY_LOCATION ${CMAKE_INSTALL_PREFIX}/lib) 
 
