Upgrade to USD-0.19.1

--- a/src/schemas/AL/usd/schemas/maya/tests/CMakeLists.txt
+++ b/src/schemas/AL/usd/schemas/maya/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(GTest REQUIRED)
 add_executable(testMayaSchemas
     main.cpp
     testMayaSchemas.cpp
-    testModelAPI.cpp  
+    testModelAPI.cpp
     )
 
 target_include_directories(testMayaSchemas
@@ -20,12 +20,17 @@ target_include_directories(testMayaSchemas
 target_link_libraries(testMayaSchemas
     AL_USDMayaSchemas
     ${GTEST_LIBRARIES}
+    sdf
+    tf
+    vt
+    plug
+    ${Boost_PYTHON_LIBRARY}
     )
 
 install(TARGETS testMayaSchemas DESTINATION bin)
 
 add_test(
-    NAME TestAdditionalSchemas 
+    NAME TestAdditionalSchemas
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMAND RunTests.sh ${CMAKE_INSTALL_PREFIX} $<TARGET_FILE_DIR:usd>
+    COMMAND RunTests.sh ${CMAKE_INSTALL_PREFIX} USD_LIBRARY_DIR
 )
