--- a/src/translators/pxrUsdTranslators/tests/CMakeLists.txt
+++ b/src/translators/pxrUsdTranslators/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ add_test(
     COMMAND
         testPxrTranslators.sh
         ${CMAKE_INSTALL_PREFIX}
-        $<TARGET_FILE_DIR:plug>
+        USD_LIBRARY_DIR
         ${CMAKE_CURRENT_SOURCE_DIR}
         ${USD_MAYA_ROOT}
     )
