Squashed 'src/' changes from 9396c506..21273c66
21273c66 Merge pull request #137 from wengn:develop_test
bcdce471 Merge pull request #133 from LumaPictures/pr/usd-0.19.1-update
ca90c984 subclass UsdImagingGLEngine to restore TestIntersectionBatch functionality.
de1f7103 now that UsdImagingGLRenderParams has it's own header, no need for void*
327f1278 Updating the code to use the new classes, structs and enums of the dev branch.
65548b73 schema translator between a maya directional light and a usd distant light

git-subtree-dir: src
git-subtree-split: 21273c66b89b5f6ce999b2c7ce14725022398b12

--- a/translators/CMakeLists.txt
+++ b/translators/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(${TRANSLATORS_PACKAGE}
     Mesh.cpp
     NurbsCurve.cpp
     FrameRange.cpp
+    DirectionalLight.cpp
 )
 
 set(arg_PUBLIC_HEADER_FILES
