Squashed 'src/' changes from 7c3336af..28740744
28740744 Merge pull request #146 from LumaPictures/pr/usd-0.19.3-update
6a987b35 Merge pull request #145 from LumaPictures/pr/fix_crash_on_root_select
8a3f93b9 Merge pull request #138 from LumaPictures/pr/mayaReferenceUpdates
29f1965e Merge pull request #89 from LumaPictures/pr/use_setInternalValue
ed4e626c clarify test further and make sure starting state is correct
23cde7cf remove test of pauseUpdates feature that hasn't been merged yet
f2d87f12 filesystem library needs system lib - need to explicitly link now that usd doesn't
8f733323 read data from dataHandle in setInternalVlaue, not plug
6ec96009 convert onAttributeChanged callbacks to setInternalValue
04612050 consolidate MayaReference update logic to make it more resilient
7e587e76 fix a crash that happens when passing "/" to ProxyShapeSelect command.

git-subtree-dir: src
git-subtree-split: 28740744913fe14a35c743f2340b3e65c50a1905

--- a/lib/AL_USDMaya/CMakeLists.txt
+++ b/lib/AL_USDMaya/CMakeLists.txt
@@ -214,7 +214,8 @@ target_link_libraries(${LIBRARY_NAME}
 
 if(NEED_BOOST_FILESYSTEM)
     target_link_libraries(${LIBRARY_NAME}
-                        ${Boost_FILESYSTEM_LIBRARY})
+                        ${Boost_FILESYSTEM_LIBRARY}
+                        ${Boost_SYSTEM_LIBRARY})
 endif()
 
 install(TARGETS ${LIBRARY_NAME}
